--- a/src/component/Content.css
+++ b/src/component/Content.css
@@ -160,7 +160,7 @@
 }
 /* likesharew section */
 .lsParent{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* display: flex; */
     /* align-items: center;
     justify-content: center; */
